--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,9 +9,9 @@ $theme-colors: (
 );
 
 // Bootstraps'
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
 $grid-breakpoints: map-merge($grid-breakpoints, (xl: 1300px));
 $dark-opacity: rgba(theme-color("dark"), .04);
