Small documentation update

--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -5,7 +5,7 @@
 	li {
 		display: inline-block;
 		text-transform: uppercase;
-		margin-right: .625em;
+		margin-right: 1.5em;
 		
 		a {
 			color: $dark;
